--- a/Loaders/app/src/main/res/values/strings.xml
+++ b/Loaders/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Loaders</string>
     <string name="action_settings">Settings</string>
+
+    <string name="format_short">Short</string>
+    <string name="format_long">Long</string>
+    <string name="get_time">Get time</string>
+    <string name="observer">Observer</string>
 </resources>
